--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>Naka Gamedev</title>
+
+  <!-- Fonte pixelada do Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
   <style>
     body {
       text-align: center;
-      font-family: sans-serif;
+      font-family: 'Press Start 2P', monospace;
       max-width: 800px;
       margin: 0 auto;
       padding: 40px;
+      background-color: #111;
+      color: #fff;
     }
+
     img {
       max-width: 100%;
+    }
+
+    ul {
+      text-align: left;
+      display: inline-block;
+    }
+
+    hr {
+      border: 0;
+      border-top: 2px dashed #888;
+      margin: 40px 0;
     }
   </style>
 </head>
@@ -31,7 +49,7 @@
   <p><strong>Ultra Pixel Survive</strong> é um jogo que mistura RPG de ação e sobrevivência em um mundo retrô com arte em pixel...</p>
 
   <h3>✨ Principais recursos:</h3>
-  <ul style="text-align: left; display: inline-block;">
+  <ul>
     <li>🏠 Construção e evolução de base</li>
     <li>🛡️ Defesa da vila com torres e armadilhas</li>
     <li>🌾 Agricultura, caça e culinária</li>
