--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <h2>🕹️ Sobre o jogo: Ultra Pixel Survive</h2>
     <img src="img/ultrapixelsurvive_title.png" width="600" alt="Ultra Pixel Survive" />
 
-    <p><strong>Ultra Pixel Survive</strong> é um jogo que mistura RPG de ação e sobrevivência em um mundo retrô com arte em pixel...</p>
+    <p><strong>Ultra Pixel Survive</strong> é um jogo que mistura RPG de ação e sobrevivência em um mundo retrô com arte em pixel. Desenvolvido pela GS Studios, o jogo desafia os jogadores a sobreviver o máximo de tempo possível em um ambiente hostil e cheio de perigos.</p>
+    <p>Você controla heróis com habilidades únicas, coleta recursos naturais como madeira, pedra e minérios, constrói defesas para proteger sua vila e enfrenta ondas de inimigos a cada noite. Além disso, é possível explorar masmorras subterrâneas, caçar, cozinhar e desbloquear novos personagens.</p>
 
     <h3>✨ Principais recursos:</h3>
     <ul>
