--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 <body>
 
   <div class="content">
-    <h1>🎮 Naka Gamedev — Jogos feitos por um jogador!</h1>
+    <img src="img/naka_profile.png" width="300" alt="naka gamedev" />
+    <h1>🎮 Naka Gamedev 🎮</h1>
+    <p>Jogos feitos por um jogador!</p>
 
     <p>Seja bem-vindo à página oficial do desenvolvedor <strong>Naka</strong>!</p>
     <p>Aqui você encontra informações sobre meus jogos e projetos em andamento.</p>
